tests/error/enum_literal_type_match1.bz
// error: unable to match type '<error-type>' to 'auto'
function test()
{
	let _ = .a;
}
